# virtkbd

./: CMakeLists.txt  flake.nix
src/: keyboard_controller.cpp  keyboard_controller.hpp  keyboard_description.cpp  keyboard_description.hpp  keyboard_dispatcher.cpp  keyboard_dispatcher.hpp  main.cpp  status_icon.cpp  virtual_keyboard.cpp
